crdroid pixelprops
Change-Id: I2b8baa94082f339699a5026096680425e1e69a62